feat(admin): 集成 xxl-sso 单点登录- 移除自定义 Permission 注解，使用 XxlSso 注解实现权限控制 - 新增 LoginController 实现登录逻辑 - 更新现有 Controller，使用 XxlSso 注解替换 Permission -重构部分代码以适配 xxl-sso