@@ -1,16 +1,14 @@
 package com.xxl.mq.admin.web.interceptor;
 
-import com.xxl.mq.admin.annotation.Permission;
 import com.xxl.mq.admin.constant.enums.RoleEnum;
-import com.xxl.mq.admin.model.dto.LoginUserDTO;
 import com.xxl.mq.admin.model.dto.ResourceDTO;
 import com.xxl.mq.admin.util.I18nUtil;
-import com.xxl.mq.admin.service.impl.LoginService;
+import com.xxl.sso.core.helper.XxlSsoHelper;
+import com.xxl.sso.core.model.LoginInfo;
 import com.xxl.tool.core.StringTool;
-import com.xxl.tool.exception.BizException;
 import com.xxl.tool.freemarker.FtlTool;
+import com.xxl.tool.response.Response;
 import org.springframework.stereotype.Component;
-import org.springframework.web.method.HandlerMethod;
 import org.springframework.web.servlet.AsyncHandlerInterceptor;
 import org.springframework.web.servlet.ModelAndView;
 
@@ -28,51 +26,7 @@ import java.util.stream.Collectors;
  * @author xuxueli 2015-12-12 18:09:04
  */
 @Component
-public class PermissionInterceptor implements AsyncHandlerInterceptor {
-
-	@Resource
-	private LoginService loginService;
-
-	@Override
-	public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-
-		// handler method
-		if (!(handler instanceof HandlerMethod)) {
-			return true;	// proceed with the next interceptor
-		}
-		HandlerMethod method = (HandlerMethod)handler;
-
-		// parse permission config
-		Permission permission = method.getMethodAnnotation(Permission.class);
-		if (permission == null) {
-			throw new BizException("权限拦截，请求路径权限未设置");
-		}
-		if (!permission.login()) {
-			return true;	// not need login ,not valid permission, pass
-		}
-
-		// valid login
-		LoginUserDTO loginUser = loginService.checkLogin(request, response);
-		if (loginUser == null) {
-			response.setStatus(302);
-			response.setHeader("location", request.getContextPath() + "/toLogin");
-			return false;
-		}
-		LoginService.setLoginUser(request, loginUser);
-
-		// valid permission
-		if (StringTool.isNotBlank(permission.value())) {
-			// need permisson
-			RoleEnum roleEnum = RoleEnum.matchByValue(loginUser.getRole());
-			if (roleEnum != null && roleEnum.getPermissions().contains(permission.value())) {
-				return true;
-			} else {
-				throw new BizException(I18nUtil.getString("system_permission_limit"));
-			}
-		}
-
-		return true;
-	}
+public class CommonDataInterceptor implements AsyncHandlerInterceptor {
 
 	@Override
 	public void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler, ModelAndView modelAndView) throws Exception {
@@ -93,7 +47,14 @@ public class PermissionInterceptor implements AsyncHandlerInterceptor {
 	 * @param modelAndView
 	 */
 	private void fillMenuData(HttpServletRequest request, ModelAndView modelAndView){
-		// fill menu-list
+
+		// login check
+		Response<LoginInfo> loginInfoResponse = XxlSsoHelper.loginCheckWithAttr(request);
+		if (!loginInfoResponse.isSuccess()) {
+			return;
+		}
+
+		// init menu-list
 		List<ResourceDTO> resourceDTOList = Arrays.asList(
 				new ResourceDTO(1, 0, "首页",1, "", "/index", "fa fa-home", 1, 0, null),
 				new ResourceDTO(2, 0, "主题管理",1, "", "/topic", " fa-cubes", 2, 0, null),
@@ -106,13 +67,13 @@ public class PermissionInterceptor implements AsyncHandlerInterceptor {
 				)),
 				new ResourceDTO(9, 0, "帮助中心",1, "", "/help", "fa-book", 9, 0, null)
 		);
-		// valid
-		if (!loginService.isAdmin(request)) {
+		// filter by role
+		if (!XxlSsoHelper.hasRole(loginInfoResponse.getData(), RoleEnum.ADMIN.getValue()).isSuccess()) {
 			resourceDTOList = resourceDTOList.stream()
 					.filter(resourceDTO -> StringTool.isBlank(resourceDTO.getPermission() ))	// normal user had no permission
 					.collect(Collectors.toList());
 		}
-		resourceDTOList.stream().sorted(Comparator.comparing(ResourceDTO::getOrder)).collect(Collectors.toList());
+		resourceDTOList.stream().sorted(Comparator.comparing(ResourceDTO::getOrder)).toList();
 
 		modelAndView.addObject("resourceList", resourceDTOList);
 	}
